--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "core-js": "^2.0.0",
+    "lodash": "^4.17.4",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
